style.css
/* bars */

.amb_image {
  background-size: cover;
  height: 70px;
  width: 50px;
  background-position: center;
  background-repeat: no-repeat;
  flex-shrink: 0;
  border-radius: 4px;
}

.amb:last-child {
  padding-bottom: 0;
}

.amb:first-child {
  padding-top: 0;
}

.amb {
  display: flex;
  padding: 10px 0 10px 0;
}

.amb_info {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-left: 15px;
}

.amb_bar-container {
  width: 100%;
  height: 11px;
  border-radius: 11px;
  background-color: rgb(var(--color-foreground-grey-dark));
  overflow: hidden;
}

.amb_bar {
  height: 100%;
  background: linear-gradient(270deg, #02a9ff, #71cfff); /* same as AniList default. overridden if profile color is non-default. */
}

.amb_status {
  font-size: 1.1rem;
}

.amb .title {
  color: rgb(var(--color-blue));
}

.amb_status {
  display: flex;
  justify-content: space-between;
}

.amb_status time {
  color: rgb(var(--color-text-lighter));
}

/* hovercards */

.amc {
  --padding: 15px;
  --height: 250px;
  --border-radius: 4px;

  position: fixed;
  top: 50px;
  left: 50px;
  background-color: rgb(var(--color-foreground));
  box-shadow: 0 0 29px rgba(49, 54, 68, .25);
  display: flex;
  width: 500px;
  height: var(--height);
  font-size: 1.4rem;
  border-radius: var(--border-radius);
  z-index: 999;
}

.amc:after {
  --x: 5px;
  content: "";
  width: 0;
  height: 0;
  border-style: solid;
  position: absolute;
  left: 50%;
  margin-left: calc(var(--x) * -1);
}

.amc.amc--direction-up:after {
  border-width: 6px var(--x) 0 var(--x);
  border-color: rgb(var(--color-foreground)) transparent transparent transparent;
  top: 100%;
}

.amc.amc--direction-down:after {
  border-width: 0 var(--x) 6px var(--x);
  border-color: transparent transparent rgb(var(--color-foreground)) transparent;
  bottom: 100%;
}

.amc.amc--nonumbers {
  height: auto;
  max-height: var(--height);
}

.amc_stats {
  display: flex;
  align-items: center;
  position: absolute;
  bottom: 0;
  margin-bottom: var(--padding);
  color: rgb(var(--color-text-lighter));
  font-size: 1.1rem;
}

.amc_image {
  width: 100px;
  height: 150px;
  background-size: cover;
  background-position: center;
  border-radius: var(--border-radius);
}

.amc_underimage {
  text-align: center;
  flex-grow: 1;
  display: block;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 7px;
  position: relative;
}

.amc--nonumbers .amc_underimage {
  margin-top: 0;
}

.amc_rating {
  font-size: 1.2em;
  margin-top: 0.7em;
}

.amc_ranking {
  line-height: 1;
}

.amc_rankings {
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.amc_cover {
  padding: var(--padding);
  display: flex;
  flex-direction: column;
}

.amc_info {
  padding: var(--padding);
  padding-left: 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.amc_title {
  position: relative;
  font-size: 1.3em;
  font-weight: 600;
  color: #ffffff;

  margin-left: -130px;
  padding-left: 130px;
  margin-top: calc(var(--padding) * -1);
  padding-top: 2em;
  padding-bottom: 7px;
  width: calc(100% + 145px);
}

.amc--nobannerimage .amc_title {
  color: rgb(var(--color-text));
}

.amc--nobannerimage .amc_title {
  padding-top: var(--padding);
}

.amc_title a:hover {
  color: inherit;
}

.amc_title .amc_banner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: top center;
  background-color: rgba(0, 0, 0, 0.5);
  filter: brightness(0.5);
  z-index: -1;
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
}

.amc_description {
  overflow: hidden;
  height: 150px;
  margin: 7px 0 7px 0;
  color: rgb(var(--color-text));
  line-height: 1.5;
  position: relative;
}

.amc_description:after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 40px;
  background-image: linear-gradient(180deg, transparent, rgb(var(--color-foreground)));
}

.amc--nonumbers .amc_description {
  height: 100px;
}

.amc_icon {
  width: 12px;
  height: 12px;
  margin-right: 0.2em;
}

